# Pravaha

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: Architecture.md  DEPENDENCIES.md  EXAMPLES.md  VIRTUAL_ENV_USAGE.md  testing.md
docs/modules/: bot.md  example.md  storage.md
knowledge/: root_knowledge.json  root_knowledge.md
knowledge/domain/physics/: gravity.json  theory.md
knowledge/history/: log.md
output/: root_output.json  root_output.md
output/final/: result.json
output/reports/monthly/: january.json  january_summary.md
src/nikhil/pravaha/domain/api/factory/: api_factory.py
src/nikhil/pravaha/domain/api/protocol/: bot_manager_protocol.py
src/nikhil/pravaha/domain/api/streaming/: sync_to_async.py
src/nikhil/pravaha/domain/bot/model/: application_request.py  utility_request.py
src/nikhil/pravaha/domain/bot/protocol/: bot_manager_protocol.py  task_config_protocol.py
src/nikhil/pravaha/domain/bot/provider/: bot_api_provider.py
src/nikhil/pravaha/domain/bot/streaming/: sync_to_async.py
src/nikhil/pravaha/domain/storage/manager/: local_storage_manager.py
src/nikhil/pravaha/domain/storage/model/: storage_config_request.py
src/nikhil/pravaha/domain/storage/protocol/: storage_config_protocol.py
src/nikhil/pravaha/domain/storage/provider/: storage_api_provider.py
src/nikhil/pravaha_example/config/: settings.py
src/nikhil/pravaha_example/domain/: calculator_tool.py  math_bot.py
src/nikhil/pravaha_example/service/: server.py
tests/: test_example_server.py
tests/unit/domain/api/factory/: test_api_factory.py
tests/unit/domain/api/streaming/: test_sync_to_async.py
tests/unit/domain/bot/model/: test_bot_models.py
tests/unit/domain/bot/provider/: test_bot_api_provider.py  test_schema_endpoints.py
tests/unit/domain/storage/: test_local_storage_manager.py  test_storage_api_provider.py  test_storage_config_request.py
tests/unit/domain/storage/provider/: test_storage_schema.py
