[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pravaha"
version = "1.0.1"
description = "FastAPI protocol library for LLM/agent applications with streaming support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nikhil Vijayakumar", email = "nikhil.vijaykumar@gmail.com"}
]



dependencies = [
    "fastapi==0.121.3",
    "sse-starlette==3.0.3",
]

[project.optional-dependencies]
config = ["PyYAML==6.0.2"]
dev = [
    "uvicorn==0.34.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "black==24.10.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pytest-cov==6.0.0",
]

[project.urls]
Homepage = "https://github.com/NikhilVijayakumar/Pravaha"
Documentation = "https://github.com/NikhilVijayakumar/Pravaha#readme"
Repository = "https://github.com/NikhilVijayakumar/Pravaha"


[tool.setuptools]
package-dir = { "" = "src/nikhil" }

[tool.setuptools.packages.find]
where = ["src/nikhil"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false